...
                style = TextStyle(fontWeight = FontWeight.Bold, fontSize = 20.sp),
                modifier = Modifier.testTag("Title")
            )
            for (term in terms) {
                Text(term)
            }
            AddTermButton(
                onClick = { showAlertDialog = true }
            )
            if (showAlertDialog) {
                AddTermAlert(
                    textFieldState = textFieldState,
                    onSubmit = {
...
                            terms.add(input)
                            textFieldState.clearText()
                        }
                        showAlertDialog = false
                    },
                    onDismiss = { showAlertDialog = false },
                    tag = "TermAlertDialog"
                )
            }
        }
    }
}
